--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Implement testing scripts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./ --fix",
-    "wdio": "wdio run ./wdio.conf.js"
+    "test": "wdio run ./src/configs/wdio.conf.js",
+    "lint": "eslint ./ --fix"
   },
   "keywords": [],
   "author": "Cesar Alberto Valencia",
