--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@wdio/cucumber-framework": "^9.15.0",
     "@wdio/local-runner": "^9.15.0",
     "@wdio/spec-reporter": "^9.15.0",
+    "chromedriver": "^137.0.4",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
-    "globals": "^16.2.0"
+    "geckodriver": "^5.0.0",
+    "globals": "^16.2.0",
+    "wdio-chromedriver-service": "^8.1.1",
+    "wdio-geckodriver-service": "^5.0.2"
   }
 }
